# flight-delay-prediction

./: .cache.sqlite  .dockerignore  .gitignore  Dockerfile  Procfile  README.MD  bootstrap_paths.py  fly.toml  index.html  main.py  pyproject.toml  requirements.prod.txt  requirements.txt
.github/workflows/: deploy.yml
FlightWeather/src/: FlightWeather.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-2/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-3/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-4/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: users.py
features/src/: feature_engineering_depDelay.py
models/src/: DelayClassifier.py  LightGBM.py  (+5 more)
notebooks/: .cache.sqlite  01_data_exploration.ipynb  01_data_exploration_second_try.ipynb  02_data_needed_discovery.ipynb  03_feature_engineering.ipynb  04_training_the_model.ipynb  airlabs_delays_raw.csv  extracting_weather_data.ipynb  file.parquet  notebook_aggregated.ipynb  pyproject.toml
openmeteo_api/: pyproject.toml
openmeteo_api/src/openmeteoapi/: APICaller.py  WeatherData.py
schemas/: flightDate.py
sublemmentary_folder/: brainstorm_ideas.txt
(+17 files in other folders)
