[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-delay-prediction-api"
version = "0.1.0"
description = "Flight Delay Prediction API backend"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "*/src"}

[tool.setuptools.packages.find]
where = ["src"]
